--- a/src/assets/base.styl
+++ b/src/assets/base.styl
@@ -1,83 +1,22 @@
-/* color palette from <https://github.com/vuejs/theme> */
-:root {
-  --vt-c-white #ffffff
-  --vt-c-white-soft #f8f8f8
-  --vt-c-white-mute #f2f2f2
+$site_background = #f7f7f4
+$white = white
+$dark = #0c1421
 
-  --vt-c-black: #181818;
-  --vt-c-black-soft #222222
-  --vt-c-black-mute #282828
-
-  --vt-c-indigo #2c3e50
-
-  --vt-c-divider-light-1 rgba(60, 60, 60, 0.29)
-  --vt-c-divider-light-2 rgba(60, 60, 60, 0.12)
-  --vt-c-divider-dark-1 rgba(84, 84, 84, 0.65)
-  --vt-c-divider-dark-2 rgba(84, 84, 84, 0.48)
-
-  --vt-c-text-light-1 var(--vt-c-indigo)
-  --vt-c-text-light-2 rgba(60, 60, 60, 0.66)
-  --vt-c-text-dark-1 var(--vt-c-white)
-  --vt-c-text-dark-2 rgba(235, 235, 235, 0.64)
+$colors = {
+  white: $white,
+  white_opacity: rgba($white, 0.5),
+  white_space: #f3f9fa,
+  white_block_shadow: rgba($dark, 0.12),
+  dark: $dark,
+  dark_opacity: rgba($dark, 0.5),
+  dark_block_shadow: rgba($white, 0.65),
+  text_dark: $dark,
+  text_dark_purple: #464255,
+  text_dark_space: #a3a3a3,
+  text_white: $white,
+  text_white_space: #a3a3a3,
+  link: #1e4ae9,
+  link_hover: #7b94fd,
+  white_smoke: #cfdfe2,
+  link_active: #7b94fd
 }
-
-/* semantic color variables for this project */
-:root
-  --color-background var(--vt-c-white)
-  --color-background-soft var(--vt-c-white-soft)
-  --color-background-mute var(--vt-c-white-mute)
-
-  --color-border var(--vt-c-divider-light-2)
-  --color-border-hover var(--vt-c-divider-light-1)
-
-  --color-heading var(--vt-c-text-light-1)
-  --color-text var(--vt-c-text-light-1)
-
-  --section-gap 160px
-
-@media (prefers-color-scheme: dark)
-  :root
-    --color-background var(--vt-c-black)
-    --color-background-soft var(--vt-c-black-soft)
-    --color-background-mute var(--vt-c-black-mute)
-
-    --color-border var(--vt-c-divider-dark-2)
-    --color-border-hover var(--vt-c-divider-dark-1)
-
-    --color-heading var(--vt-c-text-dark-1)
-    --color-text var(--vt-c-text-dark-2)
-
-*
-*::before
-*::after
-  box-sizing border-box
-  margin 0
-  font-weight normal
-
-body
-  min-height 100vh
-  color var(--color-text)
-  background var(--color-background)
-
-  transition
-    color 0.5s
-    background-color 0.5s
-  line-height 1.6
-
-  font-family
-    Inter
-    -apple-system
-    BlinkMacSystemFont
-    'Segoe UI'
-    Roboto
-    Oxygen
-    Ubuntu
-    Cantarell
-    'Fira Sans'
-    'Droid Sans'
-    'Helvetica Neue'
-    sans-serif
-  font-size 15px
-  text-rendering optimizeLegibility
-  -webkit-font-smoothing antialiased
-  -moz-osx-font-smoothing grayscale
