--- a/src/components/HeaderTemplate/index.styl
+++ b/src/components/HeaderTemplate/index.styl
@@ -1,4 +1,25 @@
 header
   width 100%
-  height 60px
-  background-color red
+  background-color white
+  position relative
+  display flex
+  justify-content flex-end
+  padding 20px 30px
+  border-radius 20px
+
+.top-navigation
+  &__user
+    border-radius 50%
+    width 50px
+    height 50px
+    display flex
+    align-items center
+    justify-content center
+    cursor pointer
+    transition 0.3s
+
+    & span
+      font-size 30px
+
+    &:hover
+      opacity 0.65
