Added a task table [layout]

--- a/src/index.styl
+++ b/src/index.styl
@@ -6,9 +6,11 @@
 
   &__navigation
     width 318px
+    height calc(100vh - 80px)
     background-color white
     padding 40px 0
     border-radius 20px
+    position sticky
 
     a
       width 100%
@@ -21,7 +23,7 @@
       font-size 14px
       text-transform uppercase
       font-weight bold
-      color #65676D
+      color #65676d
 
       &:hover
         background-color #fff4ee
