--- a/src/components/HeaderTemplate/index.styl
+++ b/src/components/HeaderTemplate/index.styl
@@ -8,7 +8,12 @@ header
   border-radius 20px
 
 .top-navigation
+  display flex
+  gap 15px
+  align-items center
+
   &__user
+  &__notifications
     border-radius 50%
     width 50px
     height 50px
