--- a/src/index.styl
+++ b/src/index.styl
@@ -6,6 +6,7 @@
 
   &__navigation
     width 318px
+    min-width 318px
     height calc(100vh - 80px)
     background-color white
     padding 40px 0
@@ -44,6 +45,7 @@
 
   &__content
     width 100%
+    min-width 75%
     display block
 
 .button-modal-close
