--- a/src/views/ProjectsView/index.styl
+++ b/src/views/ProjectsView/index.styl
@@ -31,6 +31,10 @@
   gap 15px
   justify-content flex-end
   align-items center
+  position absolute
+  width 100%
+  bottom 20px
+  right 20px
 
   &__settings
     padding 5px 15px
