add: real time in header

--- a/src/components/HeaderTemplate/index.styl
+++ b/src/components/HeaderTemplate/index.styl
@@ -28,3 +28,12 @@ header
 
     &:hover
       opacity 0.65
+
+  &__realtime
+    background-color #333
+    color white
+    padding 5px 10px
+    border-radius 12px
+    font-size 18px
+    cursor default
+    user-select none
