refactor: style real time in header

--- a/src/components/HeaderTemplate/index.styl
+++ b/src/components/HeaderTemplate/index.styl
@@ -30,10 +30,9 @@ header
       opacity 0.65
 
   &__realtime
-    background-color #333
-    color white
+    width 94px
+    color #65676d
     padding 5px 10px
-    border-radius 12px
     font-size 18px
     cursor default
     user-select none
