refactor: style header

--- a/src/components/HeaderTemplate/index.styl
+++ b/src/components/HeaderTemplate/index.styl
@@ -9,10 +9,16 @@ header
 
 .top-navigation
   display flex
+  align-items center
+  justify-content space-between
+  width 100%
+
+.top-navigation-user
+  display flex
   gap 15px
   align-items center
 
-  &__user
+  &__profile
   &__notifications
     border-radius 50%
     width 50px
