--- a/src/components/TaskCard/index.styl
+++ b/src/components/TaskCard/index.styl
@@ -8,6 +8,12 @@
   padding 15px
   transition 0.3s
   margin 2px 2px 15px
+  position relative
+
+  &.done
+    display block
+    position relative
+    opacity 0.5
 
   &:hover
     outline-color rgba(128, 128, 128, 50%)
@@ -30,9 +36,8 @@
 
 .tab-content-projects-slider-card-tasks-block-header
   display flex
-  align-items center
+  align-items flex-start
   gap 5px
-  padding-bottom 15px
 
   &__icon
     &.green
@@ -40,6 +45,7 @@
 
   &__title
     font-weight bold
+    padding-bottom 15px
 
 .tab-content-projects-slider-card-tasks-block-description
   padding-top 5px
