--- a/src/components/TaskCard/index.styl
+++ b/src/components/TaskCard/index.styl
@@ -37,7 +37,7 @@
 .tab-content-projects-slider-card-tasks-block-header
   display flex
   align-items flex-start
-  gap 5px
+  gap 10px
 
   &__icon
     &.green
@@ -46,6 +46,7 @@
   &__title
     font-weight bold
     padding-bottom 15px
+    line-height 1.2
 
 .tab-content-projects-slider-card-tasks-block-description
   padding-top 5px
