--- a/src/components/CustomCheckbox/index.styl
+++ b/src/components/CustomCheckbox/index.styl
@@ -6,26 +6,26 @@
 .custom-checkbox
   width 18px
   height 18px
-  border 1px solid #ccc
+  border 1px solid #9f9f9f
   display inline-block
   border-radius 50%
   transition 0.2s
   cursor pointer
 
   &:hover
-    background-color rgba(33, 33, 33, 10%)
+    background-color rgba(9, 224, 9, 10%)
 
   &::after
     content ''
     position absolute
     top 2px
     left 6px
-    border-bottom 2px solid #fff
-    border-right 2px solid #fff
+    border-bottom 1px solid #9f9f9f
+    border-right 1px solid #9f9f9f
     height 9px
     width 4px
     transform rotate(45deg)
-    visibility hidden
+    transition 0.3s
 
 
 
@@ -36,7 +36,7 @@
     background #75cb1c
 
     &::after
-      visibility visible
+      border-color white
 
 .test
   position absolute
