--- a/src/components/TaskSettings/index.styl
+++ b/src/components/TaskSettings/index.styl
@@ -7,7 +7,7 @@
   background-color white
   position fixed
   transition 0.3s
-  padding 10px 20px 20px
+  padding 10px 0 20px
   outline 1px solid #bfc6cb
   z-index 5
 
@@ -17,7 +17,7 @@
 .task-created-block-header
   gap 5px
   width 100%
-  padding-top 15px
+  padding 15px 20px 0
   display flex
   align-items center
   justify-content space-between
@@ -40,6 +40,11 @@
       &.done
         color green
         opacity 0.3
+
+      &:hover
+        background-color #e0f4ec
+        outline-color #58a182
+        color #12714d
 
   & .navigation
     display flex
@@ -77,6 +82,51 @@
   display flex
   flex-direction column
   gap 20px
+  padding 0 20px
+
+  &.subtasks
+    gap 0
+    padding 0
+
+    &__title
+      margin-top 20px
+
+  &__subtask
+    padding 0 20px
+    position relative
+    margin-bottom -1px
+
+    &::before
+      content ''
+      border-top 1px solid #c5c6c7
+      width calc(100% - 40px)
+      position absolute
+      top 0
+
+    &::after
+      content ''
+      border-bottom 1px solid #c5c6c7
+      width calc(100% - 40px)
+      position absolute
+      bottom 0
+
+    &:hover
+      background-color rgba(197, 198, 199, 10%)
+
+      &::after
+        width 100%
+        left 0
+
+      &::before
+        width 100%
+        left 0
+
+    input
+    textarea
+      background-color transparent !important
+      outline none
+      border-radius 0
+
 
   &__line
     display flex
@@ -89,12 +139,13 @@
     max-width 200px
 
   &__input
+    border-radius 4px
     width 100%
     padding 0 5px
     border unset
     transition 0.3s
     outline 1px solid white
-    cursor default
+    margin 0 5px
 
     &.title
       font-size 24px
@@ -109,22 +160,35 @@
       color #65676d
 
     &:focus
-      outline-color rgba(128, 128, 128, 20%)
-      cursor text
+      outline-color #fd7b38
 
     &:not(.disabled):hover
       outline-color rgba(128, 128, 128, 20%)
 
+    &:not(.disabled):hover:focus
+      outline-color #fd7b38
+
   &__add-subtask
-    width 100%
+    color rgba(128, 128, 128, 80%)
+    width max-content
     border none
-    outline none
     background transparent
     transition 0.3s
-    padding 5px 0
+    padding 5px
+    outline 1px solid rgba(128, 128, 128, 40%)
+    border-radius 4px
+    margin 20px
+    display flex
+    align-items center
+    font-size 14px
+    gap 5px
+
+    span
+      font-size 18px
 
     &:hover
       background-color rgba(51, 51, 51, 3%)
+      color rgb(128, 128, 128)
 
   textarea
     resize none
@@ -136,26 +200,32 @@
   align-items center
   gap 10px
 
+  &:first-child
+    margin-top 10px
+
+  &__done:checked ~ &__input
+    color #afabac
+
   &__input
     width 100%
-    padding 0 5px
     border unset
     transition 0.3s
     outline 1px solid white
-    cursor default
+    margin 5px
+    border-radius 4px
+    font-size 14px
+    color #1e1f21
 
     &.disabled
       color #65676d
 
     &:focus
-      outline-color rgba(128, 128, 128, 20%)
-      cursor text
+    &:not(.disabled):hover:focus
+      outline-color #fd7b38
 
-    &:not(.disabled):hover
-      outline-color rgba(128, 128, 128, 20%)
-
-  &__done:checked ~ &__input
-    opacity 0.3
+  &__done:checked ~ &__input:focus
+  &__done:checked ~ &__input:hover
+    outline-color white
 
 .button-create-task
   height 50px
